# sarashina2-vision-api

./: .env.example  .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  pyproject.toml  server.py
assets/: payload_image_b64.json  payload_image_url.json
docs/: requirements_and_specs.md  sarashina2-vision-8b.md
