[project]
name = "sarashina2-vision-openai-compatible-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "accelerate>=1.7.0",
    "fastapi>=0.115.12",
    "pillow>=11.2.1",
    "protobuf>=6.31.1",
    "python-dotenv>=1.1.0",
    "sentencepiece>=0.2.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers==4.47.0",
    "uvicorn[standard]>=0.34.3",
    "httpx>=0.27.0",
    "pydantic>=2.11.5", # Added pydantic as a core dependency
    "types-requests>=2.32.0.20250602",
    "bitsandbytes>=0.46.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
plugins = "pydantic.mypy"
strict = true
ignore_missing_imports = true
